--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "@types/jest": "^26.0.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.12",
+    "eslint": "^7.3.1",
+    "husky": "^4.2.5",
     "jest": "^26.0.1",
+    "lint-staged": "^10.2.11",
     "nodemon": "^2.0.4",
     "prettier": "2.0.5",
     "ts-jest": "^26.1.0",
@@ -29,5 +32,14 @@
     "bcryptjs": "^2.4.3",
     "graphql": "^15.1.0",
     "jsonwebtoken": "^8.5.1"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,md}": "prettier --write",
+    "*.{ts}": "eslint --fix"
   }
 }
