--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "jest",
-    "start:dev": "nodemon --watch './**/*.ts'  --exec ts-node index.ts"
+    "start:dev": "nodemon --watch './**/*.ts'  --exec ts-node index.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "",
